--- a/views/index.html
+++ b/views/index.html
@@ -64,6 +64,7 @@
           </div>
 
           <button onclick="load_tab('admin_space')" class="dropdown-item" style="font-size:1vw"> Settings</button>
+		  <div class="dropdown-container" style="display: none"></div>
         </ul>
       </div>
       <!--SIDE NAVBAR-->
