--- a/views/view_records.html
+++ b/views/view_records.html
@@ -64,8 +64,8 @@
 
 		function getSingleRecord(survID) {
             var n = [];
-            var url = 'http://18.219.137.210:3000/api/interviews/gather/67' 
-           //var url = 'http://18.219.137.210:3000/api/interviews/gather/' + survID; // TODO: get individual surveys
+            //var url = 'http://18.219.137.210:3000/api/interviews/gather/67' 
+           var url = 'http://18.219.137.210:3000/api/interviews/gather/' + survID; // TODO: get individual surveys
            console.log(url);
            $(document).ready(function() {
                $.getJSON(url, function (data) {
